# AffectRON

./: .env.deployment  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  ROADMAP.md  configure.py  deploy.sh  docker-compose.override.yml  docker-compose.yml  playwright_runner.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_complete.py  test_runner.py
infrastructure/: __init__.py  init.sql  k8s-api-deployment.yaml  k8s-dashboard-deployment.yaml  k8s-ingress.yaml  logstash.conf  nginx.conf  prometheus.yml
mobile/: App.tsx  package.json
mobile/src/screens/: AlertsScreen.tsx  MarketScreen.tsx  (+3 more)
sdk/javascript/: affectron-sdk.js
sdk/python/: affectron_sdk.py
src/aggregators/: __init__.py  base.py  merge_dedup.py  temporal_cluster.py
src/analytics/: __init__.py  base.py  correlation_analysis.py  market_insights.py  price_prediction.py  risk_scoring.py
src/api/: __init__.py  alert_engine.py  auth.py  compliance_manager.py  config.py  database.py  enhanced_websocket.py  financial_vision.py  global_currency.py  main.py  market_data_streamer.py  models.py  multi_region_deployment.py  multi_tenant.py  plugin_marketplace.py  plugin_system.py  romanian_corpus.py  routes.py  services.py  trading_integration.py  websocket.py
src/dashboard/: Dockerfile  __init__.py  package-lock.json  package.json
src/extractors/: __init__.py  base.py  fx_extractor.py  news_extractor.py  twitter_extractor.py
src/models/: __init__.py
src/pipelines/: __init__.py  aspect_sentiment.py  base.py  enhanced_sentiment.py  ner_pipeline.py  sentiment_pipeline.py  trend_analyzer.py
tests/: conftest.py  playwright_config.py  test_analytics.py  test_api.py  test_api_playwright.py  test_correlation_analytics.py  test_dashboard_playwright.py  test_enhanced_pipelines.py  test_enhanced_websocket.py  test_extractors.py  test_market_data_streamer.py  test_models.py  test_pipelines.py  test_price_prediction.py  test_romanian_corpus.py
(+18 files in other folders)
